# preda-market-simulator

./: COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PROJECT_SUMMARY.md  README.md  feature.txt  quickstart.sh
examples/: basic_simulation.rs  scenario_comparison.rs  strategy_backtest.rs
src/: analytics.rs  config.rs  error.rs  lib.rs  market.rs  oracle.rs  participant.rs  scenario.rs  simulator.rs  strategy.rs  types.rs
