[package]
name = "preda-market-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Preda Protocol Team"]
description = "Testing suite and simulation framework for time-shifted prediction markets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/predaprotocol/preda-market-simulator"
keywords = ["solana", "prediction-markets", "simulation", "testing", "belief-dynamics"]
categories = ["simulation", "development-tools::testing"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Statistics
statrs = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "preda_market_simulator"
path = "src/lib.rs"
